display fix on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,7 +160,7 @@ flex-direction: column;
   display: block;
   text-align: start;
   /* margin: auto; */
-  width: 92%;
+  width: 110%;
   }
 
   .good-idea { 
